<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_myCourses"
            android:icon="@drawable/ic_my_courses"
            android:title="@string/myCouses" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_about_us"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contactUs" />
        <item
            android:id="@+id/nav_shareApp"
            android:icon="@drawable/ic_share"
            android:title="@string/shareApp" />
    </group>

  

</menu>
