<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.activity.SignUpActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/signUp"
        android:textColor="@android:color/black"
        android:textSize="30dp" />


    <EditText
        android:id="@+id/edt_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/sullName"
        android:lines="1" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:lines="1" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:checkedButton="@+id/rdo_Male"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="14dp"
            android:text="@string/gender"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rdo_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:nextFocusDown="@id/rdo_Female"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rdo_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"

            />

    </RadioGroup>

    <TextView
        android:id="@+id/edt_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:background="?editTextBackground"
        android:onClick="openBirthDateDialog"
        android:hint="@string/birthdate" />

    <TextView
        android:id="@+id/edt_joiningDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="openJoinDateDialog"
        android:textColor="@android:color/black"

        android:background="?editTextBackground"
        android:hint="@string/joiningDate" />


    <Spinner
        android:id="@+id/sp_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:lines="1" />


    <Button
        android:id="@+id/img_Signin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_btn1_bg"
        android:onClick="gotToHome"
        android:text="@string/signUp"
        android:textColor="@android:color/white" />
</LinearLayout>
