<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.activity.UploadActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/upload"
        android:textColor="@android:color/black"
        android:textSize="30dp" />


    <EditText
        android:id="@+id/edt_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/courseName"
        android:lines="1" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/speciality"
        android:lines="1" />





    <Button
        android:id="@+id/img_Signin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_btn1_bg"
        android:onClick="add"
        android:text="@string/add"
        android:textColor="@android:color/white" />
</LinearLayout>
