<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.fragments.EventsFragment">

    <TextView
        android:id="@+id/tv_mycoursesTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:paddingStart="14dp"
        android:text="@string/events"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/tv_firstFall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_white_ten"
        android:drawableEnd="@drawable/ic_back2"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/First_Fall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_secondSpring"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_white_ten"
        android:drawableEnd="@drawable/ic_back2"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Second_Spring"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_summer"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_white_ten"
        android:drawableEnd="@drawable/ic_back2"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Summer"
        android:textColor="@android:color/black" />


</LinearLayout>
