<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_mycoursesTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:gravity="start|center"
        android:paddingStart="14dp"
        android:text="@string/profile"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_mycoursesTitle"
        android:background="@color/gray"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!--image container-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"

                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user_image" />


                <TextView
                    android:id="@+id/tv_profile_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="Maryam Al Roumi"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/tv_profile_userSpecials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="Electronics-Communication" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/Student" />

            </LinearLayout>

            <!--email container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@android:color/white">


                <TextView
                    android:id="@id/email_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="14dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_toEndOf="@+id/email_hint"
                    android:text="maryam.sgah.2019@gmail.com" />
            </RelativeLayout>


            <!--gender container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@android:color/white">


                <TextView
                    android:id="@+id/gender_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="14dp"
                    android:text="@string/gender"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_toEndOf="@+id/gender_hint"
                    android:text="@string/female" />


            </RelativeLayout>

            <!--birth date container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@android:color/white">


                <TextView
                    android:id="@+id/birthdate_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="14dp"
                    android:text="@string/birthdate"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/tv_birthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_toEndOf="@+id/birthdate_hint"
                    android:text="22/7/1994" />


            </RelativeLayout>


            <!--join date container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@android:color/white">


                <TextView
                    android:id="@+id/joinDate_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="14dp"
                    android:text="@string/joiningDate"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/tv_joinDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_toEndOf="@+id/joinDate_hint"
                    android:text="1/9/2015" />


            </RelativeLayout>


            <!--logout container-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="14dp"
                android:background="@android:color/white"
                android:gravity="bottom">


                <TextView
                    android:id="@+id/logOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="18dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/logOut"
                    android:textColor="#d0021b"

                    android:textSize="14sp"
                    android:textStyle="normal" />



            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
